; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_ssl_server_trust_providers.c_ssl_server_trust_prompt_first_cred.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_ssl_server_trust_providers.c_ssl_server_trust_prompt_first_cred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 (i32**, i32, i8*, i32, i32*, i32, i32*)* }

@SVN_AUTH_PARAM_SSL_SERVER_FAILURES = common dso_local global i32 0, align 4
@SVN_AUTH_PARAM_NO_AUTH_CACHE = common dso_local global i32 0, align 4
@SVN_AUTH_PARAM_SSL_SERVER_CERT_INFO = common dso_local global i32 0, align 4
@SVN_AUTH_SSL_OTHER = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8**, i8**, i8*, i32*, i8*, i32*)* @ssl_server_trust_prompt_first_cred to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ssl_server_trust_prompt_first_cred(i8** %0, i8** %1, i8* %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_2__*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i8** %0, i8*** %7, align 8
  store i8** %1, i8*** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = bitcast i8* %18 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %19, %struct.TYPE_2__** %13, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = load i32, i32* @SVN_AUTH_PARAM_SSL_SERVER_FAILURES, align 4
  %22 = call i8* @svn_hash_gets(i32* %20, i32 %21)
  %23 = bitcast i8* %22 to i32*
  store i32* %23, i32** %14, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = load i32, i32* @SVN_AUTH_PARAM_NO_AUTH_CACHE, align 4
  %26 = call i8* @svn_hash_gets(i32* %24, i32 %25)
  store i8* %26, i8** %15, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* @SVN_AUTH_PARAM_SSL_SERVER_CERT_INFO, align 4
  %29 = call i8* @svn_hash_gets(i32* %27, i32 %28)
  %30 = bitcast i8* %29 to i32*
  store i32* %30, i32** %16, align 8
  %31 = load i8*, i8** %15, align 8
  %32 = icmp ne i8* %31, null
  br i1 %32, label %40, label %33

33:                                               ; preds = %6
  %34 = load i32*, i32** %14, align 8
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @SVN_AUTH_SSL_OTHER, align 4
  %37 = and i32 %35, %36
  %38 = icmp ne i32 %37, 0
  %39 = xor i1 %38, true
  br label %40

40:                                               ; preds = %33, %6
  %41 = phi i1 [ false, %6 ], [ %39, %33 ]
  %42 = zext i1 %41 to i32
  store i32 %42, i32* %17, align 4
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 1
  %45 = load i32 (i32**, i32, i8*, i32, i32*, i32, i32*)*, i32 (i32**, i32, i8*, i32, i32*, i32, i32*)** %44, align 8
  %46 = load i8**, i8*** %7, align 8
  %47 = bitcast i8** %46 to i32**
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = load i8*, i8** %11, align 8
  %52 = load i32*, i32** %14, align 8
  %53 = load i32, i32* %52, align 4
  %54 = load i32*, i32** %16, align 8
  %55 = load i32, i32* %17, align 4
  %56 = load i32*, i32** %12, align 8
  %57 = call i32 %45(i32** %47, i32 %50, i8* %51, i32 %53, i32* %54, i32 %55, i32* %56)
  %58 = call i32 @SVN_ERR(i32 %57)
  %59 = load i8**, i8*** %8, align 8
  store i8* null, i8** %59, align 8
  %60 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %60
}

declare dso_local i8* @svn_hash_gets(i32*, i32) #1

declare dso_local i32 @SVN_ERR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
